Update requirements.txtFix: Correct all dependency names and formatting  - Convertido os nomes dos pacotes para minúsculas: 'APScheduler' para 'apscheduler' e 'Flask' para 'flask'. - Corrigido problemas de formatação no arquivo requirements.txt. - Esta correção resolve o erro de build "Unable to install dependencies" no Heroku.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Forcing a full rebuildaiohttp
-python-telegram-bot==20.6
-APScheduler
-Flask
+aiohttp
+python-telegram-bot>=20.0
+apscheduler
+flask
 gunicorn
 python-dotenv
