--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-aiohttp==3.9.5
-requests==2.31.0
-python-telegram-bot==20.7
-apscheduler==3.10.4
-flask==3.0.3
-gunicorn==22.0.0
-python-dotenv==1.0.1
-ccxt==4.1.98
+aiohttp
+requests
+python-telegram-bot[job-queue]==20.7
+apscheduler
+flask
+gunicorn
+python-dotenv
