--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+ccxt==1.111.84
 aiohttp
 requests
 python-telegram-bot[job-queue]==20.7
@@ -5,4 +6,3 @@ apscheduler
 flask
 gunicorn
 python-dotenv
-ccxt
