Update requirements.txtgit add requirements.txt main.py git commit -m "Corrigir ModuleNotFoundError e deploy final" git push heroku main

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+python-telegram-bot==20.7
 ccxt
 aiohttp
 requests
-python-telegram-bot[job-queue]==20.7
 apscheduler
 flask
 gunicorn
 python-dotenv
+nest_asyncio
